fix(components): Fix misalignment on carousel when there are not many slides

--- a/packages/swirl-components/src/components/swirl-carousel/swirl-carousel.css
+++ b/packages/swirl-components/src/components/swirl-carousel/swirl-carousel.css
@@ -49,8 +49,11 @@
     display: none;
   }
 
-  & ::slotted(*) {
+  & ::slotted(*:not(:first-of-type)) {
     margin-left: var(--swirl-carousel-spacing);
+  }
+
+  & ::slotted(*) {
     flex-grow: 0;
     flex-shrink: 0;
     scroll-snap-align: start;
